--- a/pratica.html
+++ b/pratica.html
@@ -1,1 +1,13 @@
-Meu nome é Daniel Vitorino
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Naruto</title>
+</head>
+<body>
+    <h1>Naruto</h1>
+    <h3>Este anime fala de uma criança que sonha em se tornar Hokage</h3>
+    <h4>Este anime é considerado o segundo famoso no japão, perdendo somente para <b>One Piece</b></h4>
+</body>
+</html>
